 - Qt: Fix extraneous dialog (fixes mgba.io/i/1654)
 - Qt: Fix window title not updating after shutting down game
 - Qt: Fix GIF view not allowing manual filename entry
 - Qt: Fix non-GB build (fixes mgba.io/i/1664)
 - Qt: Fix pausing Qt Multimedia audio (fixes mgba.io/i/1643)
 - Qt: Fix invalid names for modifier keys (fixes mgba.io/i/525)
 - Util: Fix crash reading invalid ELFs
 - VFS: Fix handle leak when double-mapping (fixes mgba.io/i/1659)
Misc:
 - FFmpeg: Add more presets
 - Qt: Fix non-SDL build (fixes mgba.io/i/1656)
 - SDL: Use DirectSound audio driver by default on Windows
 - Switch: Make OpenGL scale adjustable while running

0.8.0: (2020-01-21)
Features:
 - Improved logging configuration
 - One-Player BattleChip/Progress/Beast Link Gate support
 - Add Game Boy Color palettes for original Game Boy games
 - Debugger: Add unary operators and memory dereferencing
 - GB: Expose platform information to CLI debugger
 - Support Discord Rich Presence
 - Debugger: Add tracing to file
 - Enhanced map viewer, supporting bitmapped GBA modes and more displayed info
 - OpenGL renderer with high-resolution upscaling support
 - Experimental high level "XQ" audio for most GBA games
 - Interframe blending for games that use flicker effects
 - Frame inspector for dissecting and debugging rendering
 - Switch: Option to use built-in brightness sensor for Boktai
 - Ports: Ability to enable or disable all SGB features (closes mgba.io/i/1205)
 - Ports: Ability to crop SGB borders off screen (closes mgba.io/i/1204)
 - Cheats: Add support for loading Libretro-style cht files
 - GBA Cheats: Add support for loading EZ Flash-style cht files
 - Support for unlicensed Wisdom Tree Game Boy mapper
 - Qt: Add export button for tile view (closes mgba.io/i/1507)
 - Qt: Add recent game list clearing (closes mgba.io/i/1380)
 - GB: Yanking gamepak now supported
 - Qt: Memory range dumping (closes mgba.io/i/1298)
Emulation fixes:
 - GB: Fix using boot ROM with MMM01 games